--- a/css/style-index.css
+++ b/css/style-index.css
@@ -30,6 +30,69 @@ h2 {
     margin-bottom: 20px;
 }
 
+@keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+} 
+
+@keyframes contentappear {
+    0% {
+      z-index: 0;
+    }
+    100% {
+      z-index: 10000;
+    }
+}
+
+#content {
+    position: relative;
+    animation: contentappear 3.5s ease-in-out both;
+    background-color: #ffffff;
+}
+
+.loader {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    background-color: rgba(255, 255, 255, 0.95);
+    z-index: 9999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.loader__circles {
+    width: 80px;
+    height: 80px;
+    display: inline-block;
+    position: relative;
+    border-radius: 80px;
+    border: 4px solid transparent;
+    border-right-color: #9356DC;
+    border-left-color: #FF79DA;
+    animation: spin 2s linear 1s both;
+}
+
+.loader__circles::after {
+    content: "";
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    bottom: 8px;
+    right: 8px;
+    border-radius: 50px;
+    border: 4px solid transparent;
+    border-right-color: #99E2D0;
+    border-left-color: #99E2D0;
+    animation: spin 2.5s linear 100ms;
+}
+
 .location, .header {
     padding: 16px;
 }
@@ -45,9 +108,63 @@ h2 {
     box-shadow: 0 5px 7px rgba(0, 0, 0, 0.2);
 }
 
+.btn:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    border-radius: 32px;
+    background: linear-gradient(180deg, #ff88de 0%, #a16be0 100%);
+    opacity: 0;
+    z-index: -1;
+    transition: opacity 0.3s ease;
+}
+
+.btn:hover {    
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
+}
+
+.btn:hover:after {
+    opacity: 1;
+}
+
 .btn-like {
     position: relative;
-    font-size: 1.875rem;
+    font-size: 30px;
+}
+
+.btn-like .far {
+    opacity: 1;
+    position: relative;
+    z-index: 1;
+    transition: all 0.5s ease-in;
+}
+
+.btn-like .fas {
+    opacity: 0;
+    position: absolute;
+    z-index: 0;
+    top: 2px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: linear-gradient(180deg, #FF79DA, #9356DC);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transition: opacity 0.5s ease-out;
+}
+
+.btn-like:hover .far {
+    opacity: 0;
+    z-index: 0;
+}
+
+.btn-like:hover .fas {
+    opacity: 1;
+    z-index: 1;
 }
 
 /* Header */
@@ -81,10 +198,18 @@ h2 {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    padding-left: 95px;
+    gap: 5px;
 }
 
 .location__icon {
     margin-right: 10px;
+}
+
+.location__search {
+    border: 0px;
+    background-color: #EAEAEA;
+    font-size: 20px;
 }
 
 /* Restaurants */
@@ -123,6 +248,7 @@ h2 {
     justify-content: flex-start;
     flex-wrap: nowrap;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
+    transition: all 0.3s ease;
 }
 
 .step__icon {
@@ -146,6 +272,14 @@ h2 {
     text-align: center;
     position: absolute;
     left: -13px;
+}
+
+.step:hover {
+    background-color: #F5EDFF;
+}
+
+.step:hover i {
+    color: #9356DC;
 }
 
 @media only screen and (min-width: 768px) {
@@ -216,7 +350,11 @@ h2 {
     top: 15px;
     right: 15px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
-  }
+}
+
+.card:hover {
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
+}
 
 @media only screen and (min-width: 992px) {
     .cards__list {
@@ -237,29 +375,29 @@ h2 {
     padding: 20px;
     background: #353535;
     color: #FFF;
-  }
+}
 
-  .footer__title {
+.footer__title {
     font-family: "Shrikhand", cursive;
     font-weight: normal;
     font-size: 20px;
     text-transform: lowercase;
     margin-bottom: 20px;
-  }
+}
 
-  .footer li {
+.footer li {
     margin-bottom: 10px;
-  }
+}
 
-  .footer li a:hover {
+.footer li a:hover {
     color: #cccccc;
-  }
+}
 
-  .footer li i {
+.footer li i {
     margin-right: 5px;
     font-size: 14px;
-  }
+}
 
-  .footer li address {
+.footer li address {
     font-style: normal;
-  }
+}
