--- a/css/style-menu.css
+++ b/css/style-menu.css
@@ -20,6 +20,15 @@ h2 {
     margin-bottom: 20px;
 }
 
+@keyframes plateappear {
+    0% {
+        transform: scale(0);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
 .header {
     padding: 16px;
 }
@@ -35,25 +44,81 @@ h2 {
     box-shadow: 0 5px 7px rgba(0, 0, 0, 0.2);
 }
 
+.btn:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    border-radius: 32px;
+    background: linear-gradient(180deg, #ff88de 0%, #a16be0 100%);
+    opacity: 0;
+    z-index: -1;
+    transition: opacity 0.3s ease;
+}
+
+.btn:hover {    
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
+}
+
+.btn:hover:after {
+    opacity: 1;
+}
+
 .btn-like {
     position: relative;
-    font-size: 1.875rem;
+    font-size: 30px;
+    border: 0px;
+    background-color: #F6F6F6;
+}
+
+.btn-like .far {
+    opacity: 1;
+    position: relative;
+    z-index: 1;
+    transition: all 0.5s ease-in;
+}
+
+.btn-like .fas {
+    opacity: 0;
+    position: absolute;
+    z-index: 0;
+    top: 6px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: linear-gradient(180deg, #FF79DA, #9356DC);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transition: opacity 0.5s ease-out;
+}
+
+.btn-like:hover .far {
+    opacity: 0;
+    z-index: 0;
+}
+
+.btn-like:hover .fas {
+    opacity: 1;
+    z-index: 1;
 }
 
 .underline-title {
     text-transform: uppercase;
-    margin-bottom: 1.25rem;
+    margin-bottom: 20px;
     font-weight: 300;
 }
 
 .underline-title:after {
     background: #99E2D0;
-    bottom: -0.3125rem;
+    bottom: -5px;
     content: "";
     display: block;
-    height: 0.1875rem;
+    height: 3px;
     position: relative;
-    width: 2.5rem;
+    width: 40px;
 }
 
 /* Header */
@@ -94,16 +159,16 @@ h2 {
 
 .menu__content {
     background-color: #F6F6F6;
-    border-top-left-radius: 2.5rem;
-    border-top-right-radius: 2.5rem;
-    margin-top: -4rem;
-    padding:  2.5rem 1.25rem;
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+    margin-top: -64px;
+    padding:  40px 20px;
     position: relative;
     z-index: 2;
 }
 
 .menu__info {
-    margin-bottom: 2.5rem;
+    margin-bottom: 40px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -114,19 +179,21 @@ h2 {
 .menu__title {
     font-family: "Shrikhand", cursive;
     font-weight: normal;
-    font-size: 1.75rem;
+    font-size: 28px;
     margin-bottom: 0;
 }
 
 .menu__plates {
-    margin-bottom: 3rem;
+    margin-bottom: 48px;
 }
 
 .plate {
-    padding: 0.75rem;
+    padding: 12px;
     background: #FFF;
-    border-radius: 1rem;
-    margin-bottom: 1rem;
+    border-radius: 16px;
+    margin-bottom: 16px;
+    animation: plateappear 500ms;
+    scale: (0);
     overflow: hidden;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
     display: flex;
@@ -144,39 +211,97 @@ h2 {
 
 .plate__title {
     font-weight: 900;
-    margin-bottom: 0.3125rem;
+    margin-bottom: 5px;
 }
 
 .plate__composition {
     font-weight: 300;
-    font-size: 0.9375rem;
+    font-size: 15px;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
 }
 
 .plate__price {
-    margin-top: auto;
-    margin-left: 1rem;
+    margin-top: 14%;
+    margin-left: 16px;
 }
 
 .plate__confirmation {
     background-color: #99E2D0;
     color: #FFF;
-    font-size: 1.25rem;
-    border-top-right-radius: 1rem;
-    border-bottom-right-radius: 1rem;
-    width: 3.5rem;
+    font-size: 20px;
+    border-top-right-radius: 16px;
+    border-bottom-right-radius: 16px;
+    width: 56px;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: -0.75rem -4.5rem -0.75rem 1rem;
+    margin: -12px -72px -12px 16px;
+    transition: margin-right 500ms ease;
+}
+
+.plate__confirmation i {
+    transform: rotate(0);
+    transition: transform 500ms ease;
+}
+
+.plate:hover {
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
+}
+
+.plate:hover .plate__confirmation {
+    margin-right: -12px;
+}
+
+.plate:hover .plate__confirmation i {
+    transform: rotate(360deg);
 }
 
 .menu__order {
     text-align: center;
-    margin-bottom: 3rem;
-  }
+    margin-bottom: 48px;
+}
+
+.plate--1 {
+    animation-delay: 50ms;
+}
+
+.plate--2 {
+    animation-delay: 100ms;
+}
+
+.plate--3 {
+    animation-delay: 150ms;
+}
+
+.plate--4 {
+    animation-delay: 200ms;
+}
+
+.plate--5 {
+    animation-delay: 250ms;
+}
+
+.plate--6 {
+    animation-delay: 300ms;
+}
+
+.plate--7 {
+    animation-delay: 350ms;
+}
+
+.plate--8 {
+    animation-delay: 400ms;
+}
+
+.plate--9 {
+    animation-delay: 450ms;
+}
+
+.plate--10 {
+    animation-delay: 500ms;
+}
 
 @media only screen and (min-width: 768px) {
     .menu__plates .plates__list {
@@ -190,7 +315,10 @@ h2 {
         flex-basis: 30%;
     }
     .menu__content {
-    padding: 2.5rem;
+    padding: 40px;
+    }
+    .plate__price {
+        margin-top: 11%;
     }
 }
 
@@ -200,29 +328,29 @@ h2 {
     padding: 20px;
     background: #353535;
     color: #FFF;
-  }
+}
 
-  .footer__title {
+.footer__title {
     font-family: "Shrikhand", cursive;
     font-weight: normal;
     font-size: 20px;
     text-transform: lowercase;
     margin-bottom: 20px;
-  }
+}
 
-  .footer li {
+.footer li {
     margin-bottom: 10px;
-  }
+}
 
-  .footer li a:hover {
+.footer li a:hover {
     color: #cccccc;
-  }
+}
 
-  .footer li i {
+.footer li i {
     margin-right: 5px;
     font-size: 14px;
-  }
+}
   
-  .footer li address {
+.footer li address {
     font-style: normal;
-  }
+}
